# langchain_terminal_agent

./: .env.sample  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/terminal_agent/: __main__.py  builder.py  main.py
src/terminal_agent/core/: __init__.py  config.py  logging.py  state.py
src/terminal_agent/llm/: __init__.py  base.py  provider.py
src/terminal_agent/middleware/: shell_policy.py  shell_session.py
src/terminal_agent/tools/shell/: bash.py  powershell.py
src/terminal_agent/utils/: console_utils.py
tmp/workspace/customer_data/: analysis_tasks.txt  records.txt  sales_report.txt
tmp/workspace/project1/: changelog.txt  config.txt  readme.txt
tmp/workspace/research_lab/: inventory.txt  meeting_notes.txt  projects.txt
